--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="javascript:void(0);" id="seccion2">Tienda</a>
         <a href="javascript:void(0);" id="seccion3">Contacto</a>
         <a href="javascript:void(0);" id="seccion4">Acerca de</a>
+        <a href="login.html" id="seccion4">Ingresar</a>
     </nav>
 
     <script src="js/main.js"></script>
