--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                         </div>
                                         <li class="active"><a href="index.html">Home</a></li>
                                         <li><a href="juegos.html">Latest Games</a></li>
+                                        <li><a href="#contacto">Contacto</a></li>
                                         <li><a href="">Ingresar</a></li>
                                         <li><a href="">Registrar</a></li>
                                         <!--<li><a href="#team" class="scroll">Team</a></li>-->
@@ -635,43 +636,26 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
     <!-- //contact -->
     <!-- footer -->
-    <div class="footer">
+    <div class="footer" id="contacto">
         <div class="container">
             <div class="footer-top">
-                <div class="col-md-4 amet-sed">
-                    <div class="footer-title">
-                        <h3>About Us</h3>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt
-                        ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci
-                        tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-                </div>
                 <div class="col-md-4 amet-sed amet-medium">
                     <div class="footer-title">
-                        <h3>Twitter Feed</h3>
+                        <h3>CONTACTO</h3>
                     </div>
-                    <p><a href="#">http://example.com</a> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                        tincidunt lorem sed velit fermentum eget placerat. </p>
-                    <p><a href="#">http://mail.com</a> Sed tincidunt lorem sed velit fermentum eget placerat. Lorem
-                        ipsum dolor sit, consectetur adipiscing elit. </p>
-                </div>
-                <div class="col-md-4 amet-sed ">
-                    <div class="footer-title">
-                        <h3>Follow Us</h3>
-                    </div>
-                    <div class="agileinfo-social-grids">
-                        <ul>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-rss"></i></a></li>
-                            <li><a href="#"><i class="fa fa-vk"></i></a></li>
-                        </ul>
-                    </div>
-                    <div class="support">
-                        <form action="#" method="post">
-                            <input type="email" placeholder="Enter email...." required="">
-                            <input type="submit" value="Subscribe" class="botton">
-                        </form>
+                    <div class="contacto">
+                        <div>
+                            <p><a href="mailto:pablo.loaiza@upb.edu.co">Pablo Loaiza Mejía</a></p>
+                            <p>pablo.loaiza@upb.edu.co</p>
+                        </div>
+                        <div>
+                            <p><a href="mailto:andres.saldarriagaa@upb.edu.co"> Andres Felipe Saldarriaga Arias</a></p>
+                            <p>andres.saldarriagaa@upb.edu.co</p>
+                        </div>
+                        <div>
+                            <p><a href="mailto:juanj.ortiz@upb.edu.co">Juan Jose Ortiz Patino</a></p>
+                            <p>juanj.ortiz@upb.edu.co</p>
+                        </div>
                     </div>
                 </div>
                 <div class="clearfix"> </div>
