--- a/juegos.html
+++ b/juegos.html
@@ -195,6 +195,92 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </div>
                 <div class="clearfix"></div>
             </div>
+
+
+            <!-- footer -->
+            <div class="footer" id="contacto">
+                <div class="container">
+                    <div class="footer-top">
+                        <div class="col-md-4 amet-sed amet-medium">
+                            <div class="footer-title">
+                                <h3>CONTACTO</h3>
+                            </div>
+                            <div class="contacto">
+                                <div>
+                                    <p><a href="mailto:pablo.loaiza@upb.edu.co">Pablo Loaiza Mejía</a></p>
+                                    <p>pablo.loaiza@upb.edu.co</p>
+                                </div>
+                                <div>
+                                    <p><a href="mailto:andres.saldarriagaa@upb.edu.co"> Andres Felipe Saldarriaga
+                                            Arias</a></p>
+                                    <p>andres.saldarriagaa@upb.edu.co</p>
+                                </div>
+                                <div>
+                                    <p><a href="mailto:juanj.ortiz@upb.edu.co">Juan Jose Ortiz Patino</a></p>
+                                    <p>juanj.ortiz@upb.edu.co</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
+                </div>
+            </div>
+            <!-- //footer -->
+            <!-- copyright -->
+            <div class="copyright">
+                <div class="container">
+                    <p class="footer-class">© 2020 Gaming Store . All Rights Reserved | Design by <a
+                            href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
+                </div>
+            </div>
+            <!-- //copyright -->
+            <script src="js/jarallax.js"></script>
+            <!-- <script src="js/SmoothScroll.min.js"></script> -->
+            <script type="text/javascript">
+                /* init Jarallax */
+                $('.jarallax').jarallax({
+                    speed: 0.5,
+                    imgWidth: 1366,
+                    imgHeight: 768
+                })
+            </script>
+            <script src="js/responsiveslides.min.js"></script>
+            <script type="text/javascript" src="js/move-top.js"></script>
+            <script type="text/javascript" src="js/easing.js"></script>
+            <!-- here stars scrolling icon -->
+            <script type="text/javascript">
+                $(document).ready(function () {
+                    /*
+                        var defaults = {
+                        containerID: 'toTop', // fading element id
+                        containerHoverID: 'toTopHover', // fading element hover id
+                        scrollSpeed: 1200,
+                        easingType: 'linear' 
+                        };
+                    */
+
+                    $().UItoTop({ easingType: 'easeOutQuart' });
+
+                });
+            </script>
+            <!-- //here ends scrolling icon -->
+            <!-- Tabs-JavaScript -->
+            <script src="js/jquery.filterizr.js"></script>
+            <script src="js/controls.js"></script>
+            <script type="text/javascript">
+                $(function () {
+                    $('.filtr-container').filterizr();
+                });
+            </script>
+            <!-- //Tabs-JavaScript -->
+            <!-- PopUp-Box-JavaScript -->
+            <script src="js/jquery.chocolat.js"></script>
+            <script type="text/javascript">
+                $(function () {
+                    $('.filtr-item a').Chocolat();
+                });
+            </script>
+            <!-- //PopUp-Box-JavaScript -->
 </body>
 
 </html>
