--- a/register.html
+++ b/register.html
@@ -73,6 +73,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
     </div>
 
+    <div id="ventana" class="ligthbox hidden">
+        <div class="contenido-ventana">
+            <span></span>
+            <h1></h1>
+            <p></p>
+            <button type="button" id="btn_cerrar_modal"></button>
+        </div>
+    </div>
+
+    <!-- //banner-->
     <!--/login -->
     <section class="banner-bottom py-5">
         <div class="container">
@@ -97,14 +107,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             </div>
                         </div>
                         <div class="field-group">
-
-                            <div class="content-input-field">
-                                <input name="celular" id="celular" type="tel" value="" placeholder="Ingrese el celular"
-                                    required="" title="El formato del celular es 300-000-00-00"
-                                    pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}">
-                            </div>
-                        </div>
-                        <div class="field-group">
                             <div class="content-input-field">
                                 <input pattern=".{6,}" name="clave" id="clave" type="Password"
                                     title="La clave debe tener minimo 6 caracteres" placeholder="Ingrese la clave"
@@ -119,7 +121,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
         </div>
     </section>
-    <!-- /login -->
 
     <!-- footer -->
     <footer id="contacto">
