--- a/register.html
+++ b/register.html
@@ -37,10 +37,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             });
         });
     </script>
-
+    <script src="js/main.js"></script>
     <script src="js/md5.min.js"></script>
     <script src="js/registro.js"></script>
-    <script src="js/main.js"></script>
 </head>
 
 <body>
@@ -169,7 +168,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
     <!-- //copyright -->
     <script src="js/jarallax.js"></script>
-    <!-- <script src="js/SmoothScroll.min.js"></script> -->
+    <!-- < script src = "js/SmoothScroll.min.js" ></ > -->
     <script type="text/javascript">
         /* init Jarallax */
         $('.jarallax').jarallax({
