--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                     <ul class="rslides callbacks callbacks1" id="slider4">
                                         <li>
                                             <div class="banner_text">
-                                                <h3>Lorem ipsum</h3>
+                                                <h3>Todos tus juegos en un mismo lugar</h3>
                                                 <p>In volutpat metus quis velit malesuada</p>
                                                 <div class="w3-button">
                                                     <a href="#" data-toggle="modal" data-target="#myModal">Read More</a>
