--- a/register.html
+++ b/register.html
@@ -72,7 +72,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
     </div>
     <!--/login -->
-    <section class="banner-bottom py-5">
+    <section class="banner-bottom py-5" id="contenedor-registro">
         <div class="container">
             <div class="content-grid">
                 <div class="text-center icon">
