--- a/login.html
+++ b/login.html
@@ -73,14 +73,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
     </div>
     <!--/login -->
-    <section class="banner-bottom py-5">
+    <section class="banner-bottom py-5" id="contenedor-login">
         <div class="container">
             <div class="content-grid">
-                <div class="text-center icon">
-                    <span class="fa fa-unlock-alt"></span>
-                </div>
                 <div class="content-bottom">
                     <form action="" id="formulario">
+                        <h2>INGRESAR</h2>
                         <div class="field-group">
 
                             <div class="content-input-field">
