--- a/register.html
+++ b/register.html
@@ -75,11 +75,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <section class="banner-bottom py-5" id="contenedor-registro">
         <div class="container">
             <div class="content-grid">
-                <div class="text-center icon">
-                    <span class="fa fa-user-circle-o"></span>
-                </div>
                 <div class="content-bottom">
+
                     <form action="" id="formulario">
+                        <h2>REGISTRAR</h2>
                         <div class="field-group">
 
                             <div class="content-input-field">
