corrección diseño footer

--- a/register.html
+++ b/register.html
@@ -113,7 +113,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <footer id="contacto">
         <div class="container">
             <div class="footer-top">
-                <div class="col-md-4 amet-sed amet-medium">
+                <div class="col-md-4 amet-sed amet-medium" id="contendor-contacto">
                     <div class="footer-title">
                         <h3>CONTACTO</h3>
                     </div>
@@ -142,7 +142,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         </div>
                     </div>
                 </div>
-                <div class="clearfix"> </div>
             </div>
         </div>
     </footer>
