--- a/index.html
+++ b/index.html
@@ -85,18 +85,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                         <li>
                                             <div class="banner_text">
                                                 <h3>Todos tus juegos en un mismo lugar</h3>
-                                                <p>In volutpat metus quis velit malesuada</p>
+                                                <p>mira tus juegos</p>
                                                 <div class="w3-button">
-                                                    <a href="#" data-toggle="modal" data-target="#myModal">Read More</a>
+                                                    <a href="javascript:void(0)" id="item_5">ver más</a>
                                                 </div>
                                             </div>
                                         </li>
                                         <li>
                                             <div class="banner_text">
-                                                <h3>Nam semper</h3>
-                                                <p>Nam imperdiet tellus nec enim tempus</p>
+                                                <h3>JUEGO DEL MES</h3>
+                                                <p>GTA V</p>
                                                 <div class="w3-button">
-                                                    <a href="#" data-toggle="modal" data-target="#myModal">Read More</a>
+                                                    <a href="javascript:void(0)" data-toggle="modal"
+                                                        data-target="#myModal">ver más</a>
                                                 </div>
                                             </div>
                                         </li>
@@ -133,119 +134,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
     </div>
     <!-- //banner -->
-    <!-- about -->
-    <div class="about" id="about">
-        <div class="container">
-            <div class="welcome">
-                <div class="agileits-title">
-                    <h2>Welcome</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at placerat ante. Praesent
-                        nulla nunc, pretium dapibus efficitur in, auctor eget elit. Lorem ipsum dolor sit amet</p>
-                </div>
-            </div>
-            <div class="about-w3lsrow">
-                <div class="col-md-7 col-sm-7 w3about-img">
-                    <div class="w3about-text">
-                        <h5 class="w3l-subtitle">- About Us</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at placerat ante. Praesent
-                            nulla nunc, pretium dapibus efficitur in, auctor eget elit. Lorem ipsum dolor sit amet</p>
-                    </div>
-                </div>
-                <div class="clearfix"> </div>
-            </div>
-        </div>
-    </div>
-    <!-- //about -->
-    <!-- markets -->
-    <div class="markets" id="markets">
-        <div class="container">
-            <div class="agileits-title">
-                <h3>Our Services</h3>
-            </div>
-            <div class="markets-grids">
-                <div class="col-md-4 w3ls-markets-grid">
-                    <div class="agileits-icon-grid">
-                        <div class="icon-left">
-                            <i class="fa fa-gamepad" aria-hidden="true"></i>
-                        </div>
-                        <div class="icon-right">
-                            <h5>Suspendisse</h5>
-                            <p>Phasellus dapibus felis elit, sed accumsan arcu gravida vitae. Nullam aliquam erat at
-                                lectus ullamcorper, nec interdum neque hendrerit.</p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
-                </div>
-                <div class="col-md-4 w3ls-markets-grid">
-                    <div class="agileits-icon-grid">
-                        <div class="icon-left">
-                            <i class="fa fa-trophy" aria-hidden="true"></i>
-                        </div>
-                        <div class="icon-right">
-                            <h5>Aliquam</h5>
-                            <p>Phasellus dapibus felis elit, sed accumsan arcu gravida vitae. Nullam aliquam erat at
-                                lectus ullamcorper, nec interdum neque hendrerit.</p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
-                </div>
-                <div class="col-md-4 w3ls-markets-grid">
-                    <div class="agileits-icon-grid">
-                        <div class="icon-left">
-                            <i class="fa fa-user" aria-hidden="true"></i>
-                        </div>
-                        <div class="icon-right">
-                            <h5>Consectetur</h5>
-                            <p>Phasellus dapibus felis elit, sed accumsan arcu gravida vitae. Nullam aliquam erat at
-                                lectus ullamcorper, nec interdum neque hendrerit.</p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
-                </div>
-                <div class="col-md-4 w3ls-markets-grid">
-                    <div class="agileits-icon-grid">
-                        <div class="icon-left">
-                            <i class="fa fa-thumbs-up" aria-hidden="true"></i>
-                        </div>
-                        <div class="icon-right">
-                            <h5>Bibendum</h5>
-                            <p>Phasellus dapibus felis elit, sed accumsan arcu gravida vitae. Nullam aliquam erat at
-                                lectus ullamcorper, nec interdum neque hendrerit.</p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
-                </div>
-                <div class="col-md-4 w3ls-markets-grid">
-                    <div class="agileits-icon-grid">
-                        <div class="icon-left">
-                            <i class="fa fa-comments" aria-hidden="true"></i>
-                        </div>
-                        <div class="icon-right">
-                            <h5>Vestibulum</h5>
-                            <p>Phasellus dapibus felis elit, sed accumsan arcu gravida vitae. Nullam aliquam erat at
-                                lectus ullamcorper, nec interdum neque hendrerit.</p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
-                </div>
-                <div class="col-md-4 w3ls-markets-grid">
-                    <div class="agileits-icon-grid">
-                        <div class="icon-left">
-                            <i class="fa fa-envelope" aria-hidden="true"></i>
-                        </div>
-                        <div class="icon-right">
-                            <h5>Fermentum</h5>
-                            <p>Phasellus dapibus felis elit, sed accumsan arcu gravida vitae. Nullam aliquam erat at
-                                lectus ullamcorper, nec interdum neque hendrerit.</p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
-                </div>
-                <div class="clearfix"> </div>
-            </div>
-        </div>
-    </div>
-    <!-- //markets -->
+
 
     <!-- modal -->
     <div class="modal about-modal fade" id="myModal" tabindex="-1" role="dialog">
@@ -258,13 +147,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </div>
                 <div class="modal-body">
                     <div class="agileits-w3layouts-info">
-                        <img src="images/1.jpg" alt="" />
-                        <p>Duis venenatis, turpis eu bibendum porttitor, sapien quam ultricies tellus, ac rhoncus risus
-                            odio eget nunc. Pellentesque ac fermentum diam. Integer eu facilisis nunc, a iaculis felis.
-                            Pellentesque pellentesque tempor enim, in dapibus turpis porttitor quis. Suspendisse
-                            ultrices hendrerit massa. Nam id metus id tellus ultrices ullamcorper. Cras tempor massa
-                            luctus, varius lacus sit amet, blandit lorem. Duis auctor in tortor sed tristique. Proin sed
-                            finibus sem</p>
+                        <img src="images/GTAV.webp" alt="" />
+                        <p>Grand Theft Auto V (comúnmente abreviado como GTA V o Grand Theft Auto V: Modo historia) , es
+                            la decimoquinta entrega de la saga Grand Theft Auto que fue lanzado el 17 de septiembre de
+                            2013 para las consolas Xbox 360 y PlayStation 3.
+
+                            Tras debutar en la séptima generación de consolas en 2013, se re-estrenó un año después bajo
+                            el nombre Expandido para PlayStation 4, Xbox One y con un año de retraso en PC, con algunas
+                            mejoras tanto estéticas como la adquisición de jugar en primera persona. El 18 de mayo de
+                            2021, Rockstar da a conocer mediante un "Stay to Play" de Sony la fecha de lanzamiento de
+                            las versiones de PlayStation 5 y Xbox Series X/S bajo el nombre de "Expandido y Mejorado",
+                            que iba a ser el 11 de noviembre de ese mismo año. Sin embargo, el 9 de septiembre se
+                            anunció el atraso de la fecha de lanzamiento hasta el 15 marzo de 2022. Para estas
+                            versiones, el juego pasó a llamarse Grand Theft Auto V: Modo historia, haciendo que ahora se
+                            necesite comprar Grand Theft Auto Online por separado. </p>
                     </div>
                 </div>
             </div>
@@ -275,7 +171,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <footer id="contacto">
         <div class="container">
             <div class="footer-top">
-                <div class="col-md-4 amet-sed amet-medium">
+                <div class="col-md-4 amet-sed amet-medium" id="contendor-contacto">
                     <div class="footer-title">
                         <h3>CONTACTO</h3>
                     </div>
