--- a/login.html
+++ b/login.html
@@ -93,7 +93,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             </div>
                         </div>
                         <div class="content-input-field">
-                            <button type="submit" id="btn_enviar" class="btn">Ingresar</button>
+                            <button type="submit" id="btn_enviar" class="btn-ingreso">Ingresar</button>
                         </div>
                         <a href="register.html" class="">¿No tiene una cuenta?</a>
 
