--- a/register.html
+++ b/register.html
@@ -101,7 +101,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             </div>
                         </div>
                         <div class="content-input-field">
-                            <button type="submit" id="btn_enviar" class="btn">Registrarse</button>
+                            <button type="submit" id="btn_enviar" class="btn-ingreso">Registrarse</button>
                         </div>
                     </form>
                 </div>
