--- a/juegos.html
+++ b/juegos.html
@@ -38,6 +38,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         });
     </script>
     <script src="js/main.js"></script>
+    <script src="js/galeria_productos.js"></script>
 </head>
 
 <body>
@@ -69,124 +70,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
         </div>
     </div>
-    <div class="portfolio" id="gallery">
-        <div class="container">
-            <div class="agileits-title">
-                <h3>Our Games</h3>
-            </div>
-            <ul class="simplefilter w3layouts agileits">
-                <li class="active w3layouts agileits" data-filter="all">All</li>
-                <li class="w3layouts agileits" data-filter="1">Category1</li>
-                <li class="w3layouts agileits" data-filter="2">Category2</li>
-                <li class="w3layouts agileits" data-filter="3">Category3</li>
-                <li class="w3layouts agileits" data-filter="4">Category4</li>
-                <li class="w3layouts agileits" data-filter="5">Category5</li>
-            </ul>
 
-            <div class="filtr-container w3layouts agileits">
-
-                <div class="filtr-item w3layouts agileits portfolio-t" data-category="1, 5" data-sort="Busy streets">
-                    <a href="images/p1.jpg" class="b-link-stripe w3layouts agileits b-animate-go thickbox">
-                        <figure>
-                            <img src="images/p1.jpg" class="img-responsive w3layouts agileits" alt="W3layouts Agileits">
-                            <figcaption>
-                                <h3>Gaming <span>Store</span></h3>
-                            </figcaption>
-                        </figure>
-                    </a>
-                </div>
-
-                <div class="filtr-item w3layouts agileits" data-category="2, 5" data-sort="Luminous night">
-                    <a href="images/p2.jpg" class="b-link-stripe w3layouts agileits b-animate-go thickbox">
-                        <figure>
-                            <img src="images/p2.jpg" class="img-responsive w3layouts agileits" alt="W3layouts Agileits">
-                            <figcaption>
-                                <h3>Gaming <span>Store</span></h3>
-                            </figcaption>
-                        </figure>
-                    </a>
-                </div>
-
-                <div class="filtr-item w3layouts agileits" data-category="1, 4" data-sort="City wonders">
-                    <a href="images/p3.jpg" class="b-link-stripe w3layouts agileits b-animate-go thickbox">
-                        <figure>
-                            <img src="images/p3.jpg" class="img-responsive w3layouts agileits" alt="W3layouts Agileits">
-                            <figcaption>
-                                <h3>Gaming <span>Store</span></h3>
-                            </figcaption>
-                        </figure>
-                    </a>
-                </div>
-
-                <div class="filtr-item w3layouts agileits" data-category="3" data-sort="In production">
-                    <a href="images/p4.jpg" class="b-link-stripe w3layouts agileits b-animate-go thickbox">
-                        <figure>
-                            <img src="images/p4.jpg" class="img-responsive w3layouts agileits" alt="W3layouts Agileits">
-                            <figcaption>
-                                <h3>Gaming <span>Store</span></h3>
-                            </figcaption>
-                        </figure>
-                    </a>
-                </div>
-
-                <div class="filtr-item w3layouts agileits" data-category="3, 4" data-sort="Industrial site">
-                    <a href="images/p5.jpg" class="b-link-stripe w3layouts agileits b-animate-go thickbox">
-                        <figure>
-                            <img src="images/p5.jpg" class="img-responsive w3layouts agileits" alt="W3layouts Agileits">
-                            <figcaption>
-                                <h3>Gaming <span>Store</span></h3>
-                            </figcaption>
-                        </figure>
-                    </a>
-                </div>
-
-                <div class="filtr-item w3layouts agileits" data-category="2, 4" data-sort="Peaceful lake">
-                    <a href="images/p6.jpg" class="b-link-stripe w3layouts agileits b-animate-go thickbox">
-                        <figure>
-                            <img src="images/p6.jpg" class="img-responsive w3layouts agileits" alt="W3layouts Agileits">
-                            <figcaption>
-                                <h3>Gaming <span>Store</span></h3>
-                            </figcaption>
-                        </figure>
-                    </a>
-                </div>
-
-                <div class="filtr-item w3layouts agileits" data-category="1, 5" data-sort="City lights">
-                    <a href="images/p7.jpg" class="b-link-stripe w3layouts agileits b-animate-go thickbox">
-                        <figure>
-                            <img src="images/p7.jpg" class="img-responsive w3layouts agileits" alt="W3layouts Agileits">
-                            <figcaption>
-                                <h3>Gaming <span>Store</span></h3>
-                            </figcaption>
-                        </figure>
-                    </a>
-                </div>
-
-                <div class="filtr-item w3layouts agileits" data-category="2, 4" data-sort="Dreamhouse">
-                    <a href="images/p8.jpg" class="b-link-stripe w3layouts agileits b-animate-go thickbox">
-                        <figure>
-                            <img src="images/p8.jpg" class="img-responsive w3layouts agileits" alt="W3layouts Agileits">
-                            <figcaption>
-                                <h3>Gaming <span>Store</span></h3>
-                            </figcaption>
-                        </figure>
-                    </a>
-                </div>
-
-                <div class="filtr-item w3layouts agileits" data-category="2, 4" data-sort="Dreamhouse">
-                    <a href="images/p1.jpg" class="b-link-stripe w3layouts agileits b-animate-go thickbox">
-                        <figure>
-                            <img src="images/p1.jpg" class="img-responsive w3layouts agileits" alt="W3layouts Agileits">
-                            <figcaption>
-                                <h3>Gaming <span>Store</span></h3>
-                            </figcaption>
-                        </figure>
-                    </a>
-                </div>
-                <div class="clearfix"></div>
-            </div>
+    <!--/banner-bottom -->
+    <section class="banner-bottom py-5">
+        <div class="container py-5">
+            <h3 class="title-wthree mb-lg-5 mb-4 text-center" style="color: #FF9800;">COMPRA TUS JUEGOS FAVORITOS</h3>
+            <div class="galeria"></div>
         </div>
-    </div>
+    </section>
+    <!-- /banner-bottom -->
 
     <!-- footer -->
     <footer id="contacto">
