corrección footer juegos

--- a/juegos.html
+++ b/juegos.html
@@ -84,7 +84,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <footer id="contacto">
         <div class="container">
             <div class="footer-top">
-                <div class="col-md-4 amet-sed amet-medium">
+                <div class="col-md-4 amet-sed amet-medium" id="contendor-contacto">
                     <div class="footer-title">
                         <h3>CONTACTO</h3>
                     </div>
